--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.307.0",
     "next": "14.0.4",
+    "next-svgr": "^0.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-star-rating-component": "^1.4.1",
